--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">Startseite</a></li>
-                <li><a href="projekte.html">Projekte</a></li>
+                <li><a href="hausaufgaben_demnachst.html">Hausaufgaben</a></li>
+                <li><a href="projekte_demnachst.html">Projekte</a></li>
             </ul>
         </nav>
     </header>
@@ -46,10 +47,6 @@
     <div class="minipage">
         <h2 id="weiterePrufung">Weitere Prüfungen</h2>
         <button onclick="weiterePrufung()">Drücken</button>
-    </div>
-    <div class="minipage">
-        <h2 id="Hausaufgaben">Hausaufgaben</h2>
-        <button onclick="Hausaufgaben()">Drücken</button>
     </div>
 </div>
 </body>
