--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>School Assistant</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js"></script>
+
+    <link rel="icon" href="favicon.png" type="image/png">
+    <link rel="apple-touch-icon" href="apple-icon.png">
 </head>
 
 <body>
