--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>School Assistant</title>
+    <title>BKS Assistant v.2.0</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js"></script>
 
@@ -14,44 +14,65 @@
 
 <body>
     <header>
-        <h3>School Assistant</h3>
+        <!-- Header allenfalls aktualisieren-->
+        <h3>BKS Assistant</h3>
         <nav>
             <ul>
                 <li><a href="index.html">Startseite</a></li>
-                <li><a href="hausaufgaben_demnachst.html">Hausaufgaben</a></li>
-                <li><a href="projekte_demnachst.html">Projekte</a></li>
+                <li><a href="x-demnachst.html" target="_blank">eLibrary</a></li>
+                <li><a href="x-demnachst.html" target="_blank">Login</a></li>
             </ul>
         </nav>
     </header>
 </body>
 
 <body>
-    <h1>Januar 2025</h1>
+    <h1>AccessPortal</h1>
+
+    <div class="container">
+        <div class="minipage">
+            <h2 id="BKSLinks">BKS Links</h2>
+            <button onclick="BKSLinks()">Drücken</button>
+        </div>
+        <div class="minipage">
+            <h2 id="Sprachen">Quizlet</h2>
+            <button onclick="Sprachen()">Drücken</button>
+        </div>
+    </div>
 </body>
-<style>
-    .container {
-      display: flex;
-      gap: 20px;
-    }
-    .minipage {
-      flex: 1;
-      padding: 10px;
-      border: 1px solid #ccc;
-      background-color: #f9f9f9;
-    }
-  </style>
-</head>
+
+<iframe src="x-agenda.html" width="100%" height="600px" frameborder="0">
+    Dein Browser unterstützt keine eingebetteten Frames.
+</iframe>
+
 <body>
-<div class="container">
-    <div class="minipage">
-        <h2 id="Sprachprufung">Sprachprüfungen</h2>
-        <button onclick="Sprachprufung()">Drücken</button>
+    <h1>Dashboard</h1>
+
+    <div class="dashboard">
+        <div class="card-container">
+            <div class="card">
+                <h5>Version 3.0</h5>
+                <p>Termin: Frühling 2025</p>
+                <p>tba</p>
+            </div>
+            <div class="card">
+                <h5>Version 2.0</h5>
+                <p>Termin: 01.02.2025</p>
+                <p>Beschreibung: AccessPortal / Agenda / Dashboard</p>
+            </div>
+            <div class="card">
+                <h5>Archiv</h5>
+                <!-- Header allenfalls aktualisieren-->
+                <p><a href="x-dashboard.html">Hier</a></p>
+            </div>
+        </div>
     </div>
-    <div class="minipage">
-        <h2 id="weiterePrufung">Weitere Prüfungen</h2>
-        <button onclick="weiterePrufung()">Drücken</button>
-    </div>
-</div>
+</body>
+
+<body>
+    <footer>
+        <h4>&copy; 2025 School Utilities, alle Rechte vorbehalten.</h4>
+    </footer>
 </body>
 
 </html>
