--- a/x-dashboard.html
+++ b/x-dashboard.html
@@ -32,15 +32,19 @@
         <div class="card-container">
             <div class="card">
                 <h5>Version 3.0</h5>
-                <p>Termin: Frühling 2025</p>
-                <p>tba</p>
+                <p>Termin: Sommer 2025</p>
+                <p>Beschreibung: tba</p>
+            </div>
+            <div class="card">
+                <h5>Version 2.1</h5>
+                <p>Termin: 01.03.2025</p>
+                <p>Beschreibung: Notenrechner</p>
             </div>
             <div class="card">
                 <h5>Version 2.0</h5>
                 <p>Termin: 01.02.2025</p>
                 <p>Beschreibung: AccessPortal / Agenda / Dashboard</p>
             </div>
-
             <div class="card">
                 <h5>Version 1.1</h5>
                 <p>Termin: 18.01.2025</p>
@@ -51,7 +55,6 @@
                 <p>Termin: 16.01.2025</p>
                 <p>Beschreibung: Grundlagen / Startseite</p>
             </div>
-
         </div>
     </div>
 </body>
