--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
         <div class="card-container">
             <div class="card">
                 <h5>Version 3.0</h5>
-                <p>Termin: Frühling 2025</p>
-                <p>tba</p>
+                <p>Termin: Sommer 2025</p>
+                <p>Beschreibung: tba</p>
             </div>
             <div class="card">
-                <h5>Version 2.0</h5>
-                <p>Termin: 01.02.2025</p>
-                <p>Beschreibung: AccessPortal / Agenda / Dashboard</p>
+                <h5>Version 2.1</h5>
+                <p>Termin: 01.03.2025</p>
+                <p>Beschreibung: Notenrechner</p>
             </div>
             <div class="card">
                 <h5>Archiv</h5>
