--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">Startseite</a></li>
+                <li><a href="x-demnachst.html" target="_blank">demnächst</a></li>
                 <li><a href="x-demnachst.html" target="_blank">eLibrary</a></li>
-                <li><a href="x-demnachst.html" target="_blank">Login</a></li>
             </ul>
         </nav>
     </header>
@@ -41,7 +41,14 @@
     </div>
 </body>
 
+<body>
+    <h1>Agenda</h1>
+</body>
 <iframe src="x-agenda.html" width="100%" height="600px" frameborder="0">
+    Dein Browser unterstützt keine eingebetteten Frames.
+</iframe>
+
+<iframe src="x-rechner.html" width="100%" height="650px" frameborder="0">
     Dein Browser unterstützt keine eingebetteten Frames.
 </iframe>
 
@@ -71,7 +78,7 @@
 
 <body>
     <footer>
-        <h4>&copy; 2025 School Utilities, alle Rechte vorbehalten.</h4>
+        <h4>&copy; 2025 <a href="https://sites.google.com/view/r-ravinthrarasa/projekte/education-utilities" target="_blank" class="styled-link">Education Utilities</a>, alle <a href="https://sites.google.com/view/r-ravinthrarasa/organisation/impressum" target="_blank" class="styled-link">Rechte</a> vorbehalten.</h4>
     </footer>
 </body>
 
