--- a/x-agenda.html
+++ b/x-agenda.html
@@ -88,12 +88,46 @@
             overflow: hidden;
             text-overflow: ellipsis;
         }
+
+        @media (max-width: 768px) {
+            .calendar-container {
+                max-width: 90%;
+                padding: 10px;
+            }
+
+            .day-header, .day {
+                font-size: 14px;
+                padding: 8px;
+            }
+
+            .day {
+                min-height: 40px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .calendar {
+                grid-template-columns: repeat(7, minmax(30px, 1fr));
+                gap: 3px;
+            }
+
+            .day-header, .day {
+                font-size: 12px;
+                padding: 5px;
+            }
+
+            .day {
+                min-height: 35px;
+            }
+
+            .month-header {
+                font-size: 18px;
+            }
+        }
     </style>
 </head>
 
 <body>
-    <h1>Agenda</h1>
-
     <div class="calendar-container">
         <div class="month-header">
             <button class="button2" onclick="prevMonth()">‹</button>
@@ -212,6 +246,95 @@
                 `;
             }
         }
+
+
+    function generateCalendar(month, year) {
+        const calendar = document.getElementById("calendar");
+        const monthYear = document.getElementById("month-year");
+
+        const monthNames = ["Januar", "Februar", "März", "April", "Mai", "Juni", "Juli", "August", "September", "Oktober", "November", "Dezember"];
+        monthYear.innerText = `${monthNames[month]} ${year}`;
+
+        calendar.innerHTML = `
+            <div class="day-header">Mo</div> <div class="day-header">Di</div> <div class="day-header">Mi</div> 
+            <div class="day-header">Do</div> <div class="day-header">Fr</div> <div class="day-header">Sa</div> <div class="day-header">So</div>
+        `;
+
+        let firstDay = new Date(year, month, 1).getDay();
+        let daysInMonth = new Date(year, month + 1, 0).getDate();
+        
+        let today = new Date();
+        let currentDay = today.getDate();
+        let currentMonth = today.getMonth();
+        let currentYear = today.getFullYear();
+
+        if (firstDay === 0) firstDay = 7;  
+
+        for (let i = 1; i < firstDay; i++) {
+            calendar.innerHTML += `<div></div>`;
+        }
+
+        for (let day = 1; day <= daysInMonth; day++) {
+            let dateKey = `${year}-${String(month + 1).padStart(2, '0')}-${String(day).padStart(2, '0')}`;
+            let eventHTML = "";
+            let multiDayEventHTML = "";
+
+            events.forEach(event => {
+                const startDate = new Date(event.start);
+                const endDate = new Date(event.end);
+                const currentDate = new Date(dateKey);
+
+                if (currentDate >= startDate && currentDate <= endDate) {
+                    eventHTML += `<div class="event">${event.title}</div>`;
+
+                    if (startDate <= currentDate && endDate >= currentDate) {
+                        multiDayEventHTML = `<div class="multi-day-event-bar"></div>`;
+                    }
+                }
+            });
+
+            let weekendClass = (new Date(year, month, day).getDay() === 6 || new Date(year, month, day).getDay() === 0) ? "weekend" : "";
+
+            let todayClass = (day === currentDay && month === currentMonth && year === currentYear) ? "today" : "";
+
+            calendar.innerHTML += `
+                <div class="day ${weekendClass} ${todayClass}">
+                    <span class="day-number">${day}</span>
+                    ${multiDayEventHTML}
+                    ${eventHTML}
+                </div>
+            `;
+        }
+    }
+
+    const style = document.createElement("style");
+    style.innerHTML = `
+    .today .day-number {
+        font-weight: bold;
+    }
+    `;
+
+    document.head.appendChild(style);
+
+    function prevMonth() {
+        currentMonth--;
+        if (currentMonth < 0) {
+            currentMonth = 11;
+            currentYear--;
+        }
+        generateCalendar(currentMonth, currentYear);
+    }
+
+    function nextMonth() {
+        currentMonth++;
+        if (currentMonth > 11) {
+            currentMonth = 0;
+            currentYear++;
+        }
+        generateCalendar(currentMonth, currentYear);
+    }
+
+    generateCalendar(currentMonth, currentYear);  <!-- HIER BLEIBT DER AUFRUF UNVERÄNDERT -->
 
         function prevMonth() {
             currentMonth--;
