--- a/x-rechner.html
+++ b/x-rechner.html
@@ -94,7 +94,7 @@
             background: #555;
         }
 
-                body {
+        body {
             display: flex;
             justify-content: center;
             align-items: flex-start;
@@ -142,6 +142,15 @@
         }
 
         @media (max-width: 480px) {
+            body {
+                align-items: flex-start;
+            }
+
+            .container {
+                padding: 10px;
+                width: 100%;
+            }
+
             .note-row {
                 flex-direction: column;
                 align-items: stretch;
