--- a/x-rechner.html
+++ b/x-rechner.html
@@ -24,6 +24,34 @@
             width: 450px;
         }
 
+        .note-row {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 20px;
+            gap: 10px;
+        }
+
+        @media (max-width: 768px) {
+            .note-row {
+                flex-direction: column;
+                align-items: stretch;
+                gap: 5px;
+            }
+
+            .note, .weight, .punkte {
+                width: 100%;
+            }
+        }
+
+        .note, .weight, .punkte {
+            padding: 8px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            font-size: 16px;
+            text-align: center;
+        }
+        
         .tab-container {
             display: flex;
             justify-content: center;
@@ -51,22 +79,6 @@
 
         .calculator.active {
             display: block;
-        }
-
-        .note-row {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 20px;
-            gap: 10px;
-        }
-
-        .note, .weight, .punkte {
-            padding: 8px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            font-size: 16px;
-            text-align: center;
         }
 
         .note { width: 60%; margin-right: 5px; }
