--- a/x-rechner.html
+++ b/x-rechner.html
@@ -31,19 +31,7 @@
             margin-bottom: 20px;
             gap: 10px;
         }
-
-        @media (max-width: 768px) {
-            .note-row {
-                flex-direction: column;
-                align-items: stretch;
-                gap: 5px;
-            }
-
-            .note, .weight, .punkte {
-                width: 100%;
-            }
-        }
-
+        
         .note, .weight, .punkte {
             padding: 8px;
             border: 1px solid #ccc;
@@ -51,7 +39,19 @@
             font-size: 16px;
             text-align: center;
         }
-        
+
+        @media (max-width: 768px) {
+            .note-row {
+                flex-direction: column;
+                gap: 8px;
+            }
+
+            .note, .weight, .punkte {
+                width: 90%;
+                max-width: 300px;
+            }
+        }
+
         .tab-container {
             display: flex;
             justify-content: center;
