--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
 <body>
     <h1>Agenda</h1>
 </body>
-<iframe src="x-agenda.html" width="100%" height="600px" frameborder="0">
-    Dein Browser unterstützt keine eingebetteten Frames.
+<iframe class="agenda-iframe" src="x-agenda.html" width="100%" height="600px" frameborder="0">
+    Diese Funktion ist nur auf Desktop-Version verfügbar.
 </iframe>
 
-<iframe src="x-rechner.html" width="100%" height="650px" frameborder="0">
-    Dein Browser unterstützt keine eingebetteten Frames.
+<iframe class="rechner-iframe" src="x-rechner.html" width="100%" height="650px" frameborder="0">
+    Diese Funktion ist nur auf Desktop-Version verfügbar.
 </iframe>
 
 <body>
