--- a/index.html
+++ b/index.html
@@ -49,11 +49,6 @@
     <div class="agenda-fallback">Die Agenda-Funktion ist nur auf Desktop-Version verfügbar.</div>
 </div>
 
-<div class="rechner-wrapper">
-    <iframe class="rechner-iframe" src="x-rechner.html" width="100%" height="650px" frameborder="0"></iframe>
-    <div class="rechner-fallback">Die Rechner-Funktion ist nur auf Desktop-Version verfügbar.</div>
-</div>
-
 <script>
     function checkViewport() {
         const isMobile = window.innerWidth <= 1024;
@@ -62,15 +57,7 @@
             iframe.style.display = isMobile ? "none" : "block";
         });
 
-        document.querySelectorAll(".rechner-iframe").forEach(iframe => {
-            iframe.style.display = isMobile ? "none" : "block";
-        });
-
         document.querySelectorAll(".agenda-fallback").forEach(fallback => {
-            fallback.style.display = isMobile ? "block" : "none";
-        });
-
-        document.querySelectorAll(".rechner-fallback").forEach(fallback => {
             fallback.style.display = isMobile ? "block" : "none";
         });
     }
@@ -78,6 +65,10 @@
     window.addEventListener("resize", checkViewport);
     window.addEventListener("load", checkViewport);
 </script>
+
+<iframe class="rechner-iframe" src="x-rechner.html" width="100%" height="650px" frameborder="0">
+    Diese Funktion ist nur auf Desktop-Version verfügbar.
+</iframe>
 
 <body>
     <h1>Dashboard</h1>
