--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
     window.addEventListener("load", checkViewport);
 </script>
 
-<iframe class="rechner-iframe" src="x-rechner.html" width="100%" height="650px" frameborder="0">
-    Diese Funktion ist nur auf Desktop-Version verfügbar.
+<iframe src="x-rechner.html" width="100%" height="650px" frameborder="0">
+    Dein Browser unterstützt keine eingebettenten Frames.
 </iframe>
 
 <body>
