--- a/x-dashboard.html
+++ b/x-dashboard.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BKS Assistant v.2.0</title>
+    <title>BKS Assistant v.2.1</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js"></script>
 
@@ -38,7 +38,7 @@
             <div class="card">
                 <h5>Version 2.1</h5>
                 <p>Termin: 01.03.2025</p>
-                <p>Beschreibung: Notenrechner</p>
+                <p>Beschreibung: Notenrechner / Mobile Version</p>
             </div>
             <div class="card">
                 <h5>Version 2.0</h5>
