--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <div class="card">
                 <h5>Version 2.1</h5>
                 <p>Termin: 01.03.2025</p>
-                <p>Beschreibung: Notenrechner</p>
+                <p>Beschreibung: Notenrechner / Mobile Version</p>
             </div>
             <div class="card">
                 <h5>Archiv</h5>
