--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="styles.css">
     <script src="script.js"></script>
 
-    <link rel="icon" href="favicon.png" type="image/png">
-    <link rel="apple-touch-icon" href="apple-icon.png">
+    <link rel="icon" href="favicon.JPEG" type="image/png">
+    <link rel="apple-touch-icon" href="apple-icon.JPEG">
 </head>
 
 <body>
