--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <ul>
                 <li><a href="index.html">Startseite</a></li>
                 <li><a href="x-demnachst.html" target="_blank">demnächst</a></li>
-                <li><a href="x-demnachst.html" target="_blank">eLibrary</a></li>
+                <li><a href="https://rr-utilities.github.io/elibrary" target="_blank">eLibrary</a></li>
             </ul>
         </nav>
     </header>
@@ -96,7 +96,7 @@
 
 <body>
     <footer>
-        <h4>&copy; 2025 <a href="https://sites.google.com/view/r-ravinthrarasa/projekte/education-utilities" target="_blank" class="styled-link">Education Utilities</a>, alle <a href="https://sites.google.com/view/r-ravinthrarasa/organisation/impressum" target="_blank" class="styled-link">Rechte</a> vorbehalten.</h4>
+        <h4>&copy; 2025 <a href="https://sites.google.com/view/r-ravinthrarasa/projekte/education-utilities" target="_blank" class="styled-link">Education Utilities</a>, alle <a href="https://sites.google.com/view/r-ravinthrarasa/impressum" target="_blank" class="styled-link">Rechte</a> vorbehalten.</h4>
     </footer>
 </body>
 
