--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
         <div class="card-container">
             <div class="card">
                 <h5>Version 3.0</h5>
-                <p>Termin: Sommer 2025</p>
-                <p>Beschreibung: tba</p>
+                <p>Termin: 09.08.2025</p>
+                <p>Beschreibung: KI-Assistant / Minigames</p>
             </div>
             <div class="card">
                 <h5>Version 2.1</h5>
