--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <!-- Header allenfalls aktualisieren-->
-        <h3>BKS Assistant jklöfdsajklöfdsajklöfdsa</h3>
+        <h3>BKS Assistant</h3>
         <nav>
             <ul>
                 <li><a href="index.html">Startseite</a></li>
