--- a/main/notenrechner.html
+++ b/main/notenrechner.html
@@ -9,11 +9,11 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
     <title>BKS Assistant v.3.1</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="../styles.css">
+    <script src="../script.js"></script>
 
-    <link rel="icon" href="favicon/favicon.jpg" type="image/jpg">
-    <link rel="apple-touch-icon" href="favicon/apple-icon.jpg">
+    <link rel="icon" href="../favicon/favicon.jpg" type="image/jpg">
+    <link rel="apple-touch-icon" href="../favicon/apple-icon.jpg">
     <meta name="apple-mobile-web-app-title" content="BKS Assistant">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer">
@@ -24,35 +24,20 @@
         <h3>BKS Assistant</h3>
         <nav>
             <ul>
-                <li><a href="index.html">Startseite</a></li>
-                <li><a href="main/notenrechner.html">Notenrechner</a></li>
-                <li><a href="main/pause.html">Pause</a></li>
-                <li><a href="main/info.html" title="Portal Info"><i class="fas fa-circle-info"></i></a></li>
+                <li><a href="../index.html">Startseite</a></li>
+                <li><a href="notenrechner.html">Notenrechner</a></li>
+                <li><a href="pause.html">Pause</a></li>
+                <li><a href="info.html" title="Portal Info"><i class="fas fa-circle-info"></i></a></li>
                 <li><a href="https://rr-utilities.github.io/elibrary">eLibrary</a></li>
-        </ul>
+            </ul>
         </nav>
     </header>
 </body>
 
 <body>
-    <h1>AccessPortal</h1>
-
-    <div class="container">
-        <div class="minipage">
-            <h2 id="BKSLinks">BKS Links</h2>
-            <button onclick="BKSLinks()">Drücken</button>
-        </div>
-        <div class="minipage">
-            <h2 id="Sprachen">Quizlet</h2>
-            <button onclick="Sprachen()">Drücken</button>
-        </div>
-    </div>
+    <h1>Notenrechner</h1>
 </body>
-
-<body>
-    <h1>Quick-Add</h1>
-</body>
-<iframe src="main/frames/quickadd.html" width="100%" height="650px" frameborder="0">
+<iframe src="frames/rechner.html" width="100%" height="650px" frameborder="0">
     Dein Browser unterstützt keine eingebettenten Frames.
 </iframe>
 
