--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </body>
 
 <body>
-    <h1>Quick-Add</h1>
+    <h1>QuickAdd</h1>
 </body>
 <iframe src="main/frames/quickadd.html" width="100%" height="650px" frameborder="0">
     Dein Browser unterstützt keine eingebettenten Frames.
